<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"


    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:scaleType="centerInside"
        android:layout_marginTop="25dp"
        app:srcCompat="@drawable/toppng_com_csgo_sticker_logo_headshot_cs_go_1024x926" />

    <TextView
        android:id="@+id/txvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instName"
        />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/txtName"
        android:inputType="textPersonName"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZáéíóú"
        />


    <TextView
        android:id="@+id/txvAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instAge" />

    <EditText
        android:id="@+id/edtAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/txtAge"
        android:inputType="number" />




    <Button
        android:id="@+id/btnGo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSubmit"
        android:layout_margin="10dp"
        android:backgroundTint="@color/orangecsgo"
        />

    <TextView
        android:id="@+id/txvOut"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        tools:layout_editor_absoluteX="205dp"
        tools:layout_editor_absoluteY="597dp"
        android:textAlignment="center"/>

</LinearLayout>